fixed cat jump game

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,11 @@ body {
 .cat,
 .food,
 .clean,
-.game {
+.game,
+.warning,
+p,
+h1,
+a {
   user-select: none;
 }
 
@@ -200,7 +204,7 @@ body {
   cursor: pointer;
 }
 
-canvas {
+#pong {
   image-rendering: pixelated;
   height: 100%;
   width: 100%;
@@ -228,7 +232,6 @@ canvas {
   text-shadow: 2px 2px 2px #000;
 }
 
-/* minijuego cat-jump */
 #close-game-jump {
   font-size: 4rem;
   cursor: pointer;
@@ -242,28 +245,37 @@ canvas {
   text-shadow: 2px 2px 2px #000;
 }
 
+/* minijuego cat-jump */
 #cat-jump {
+  display: none;
   position: absolute;
+  z-index: -999;
+  height: 100%;
   width: 100%;
-  height: 100vh;
+  aspect-ratio: 1.7;
+  cursor: cell;
 }
 
 .container-sky {
-  width: 2560px;
-  height: 1440px;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1.7;
   margin: 0 auto;
   position: relative;
-  background: url("img/img-minijuegos/cat-jump/bg-cat-jum.jpg");
+  z-index: -999;
+  background: url("img/img-minijuegos/cat-jump/bg-cat-jump.jpg") no-repeat;
 }
 
 .character {
-  width: 134px;
-  height: 194px;
+  width: 11.1%;
+  height: 27.2%;
   position: absolute;
-  bottom: 194px;
-  left: 200px;
-  background: url("img/img-minijuegos/cat-jump/animation-catu-jump.png");
-  z-index: 310;
+  bottom: 11%;
+  left: 15%;
+  background: url("img/img-minijuegos/cat-jump/animation-catu-jump.png")
+    no-repeat;
+  background-size: 400%;
+  z-index: -999;
 }
 
 .cat-running {
@@ -271,16 +283,13 @@ canvas {
 }
 
 .obstacle {
-  width: 176px;
-  height: 194px;
+  width: 13.5%;
+  height: 27.2%;
   position: absolute;
-  bottom: 197px;
-  left: 250px;
-  background: url("img/img-minijuegos/cat-jump/Mummy-Cat-Jump.png");
-  background-repeat: no-repeat;
-  z-index: 400;
-
-  /* animation: animated-background 10s linear infinite; */
+  bottom: 11%;
+  left: 2000px;
+  background: url("img/img-minijuegos/cat-jump/Mummy-Cat-Jump.png") no-repeat;
+  z-index: -999;
 }
 
 .obstacle-moving {
@@ -337,13 +346,13 @@ canvas {
 }
 
 .floor {
-  width: 2560px;
-  height: 1440px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
   background: url("img/img-minijuegos/cat-jump/floor-cat-jump.png");
-  z-index: 300;
+  z-index: -999;
   background-repeat: repeat;
   background-position: 0 0;
   background-size: auto 100%;
@@ -360,12 +369,12 @@ canvas {
 }
 
 .background-egypt {
-  width: 11016px;
-  height: 1440px;
+  width: 100%;
+  height: 100%;
   bottom: 0;
   left: 0;
   background: url("img/img-minijuegos/cat-jump/bg-pyramid-cat-jump.png");
-  z-index: 100;
+  z-index: -999;
   background-position: 0 0;
   background-size: auto 100%;
 }
@@ -385,6 +394,7 @@ canvas {
   width: 2560px;
   color: #d48872;
   position: absolute;
+  z-index: -999;
   bottom: 1300px;
   font-family: "Montserrat alternates", sans-serif;
   font-size: 130px;
@@ -396,6 +406,7 @@ canvas {
   position: absolute;
   bottom: 1300px;
   font-size: 100px;
+  z-index: -999;
 }
 
 /* img minijuegos */
@@ -542,6 +553,10 @@ a:hover {
     z-index: -999;
   }
 
+  #close-game-pong {
+    font-size: 1rem;
+  }
+
   .window-notice .content {
     background-size: 70%;
     width: 100%;
@@ -565,6 +580,10 @@ a:hover {
     max-width: 100%;
   }
 
+  #close-game-pong {
+    font-size: 1rem;
+  }
+
   .window-notice .content-text {
     width: 50%;
     font-size: 70%;
@@ -575,14 +594,14 @@ a:hover {
   }
 }
 
-@media screen and (100px < width <= 1500px) {
+@media screen and (1000px < width <= 1500px) {
   .window-notice .content {
     background-size: 45vw;
     width: 100%;
   }
 
-  #close-game {
-    font-size: 2rem;
+  #close-game-pong {
+    font-size: 1.5rem;
   }
 
   .window-notice .content-text {
